--- a/html/index.html
+++ b/html/index.html
@@ -2,6 +2,12 @@
 <title>
 	Hello World
 </title>
+<style>
+body {
+    background: #212121;
+    color: #aaaaf2;
+}
+</style>
 <body>
 <h1>Hello World</h1>
 <p>
