improve the site

--- a/html/index.html
+++ b/html/index.html
@@ -1,16 +1,15 @@
+<html>
 <head>
 <title>
 	Hello World
 </title>
-<style>
-body {
-    background: #212121;
-    color: #f2aaaa;
-}
-</style>
+<link rel="stylesheet" href="foundation.css">
+<link rel="stylesheet" href="style.css">
 <body>
 <h1>Hello World</h1>
 <p>
 	Hello all you beautiful people.
 </p>
 </body>
+<script src="script.js"></script>
+</html>
